--- a/backend/Dockerfile.visualization
+++ b/backend/Dockerfile.visualization
@@ -20,8 +20,7 @@
 FROM tensorflow/tensorflow:2.2.0
 
 RUN apt-get update \
-  && apt-get install -y wget curl tar \
-  pkg-config libcairo2-dev libgirepository1.0-dev # For the pygobject and pycairo package setup due to licensing
+  && apt-get install -y wget curl tar
 
 RUN curl https://dl.google.com/dl/cloudsdk/release/google-cloud-sdk.tar.gz > /tmp/google-cloud-sdk.tar.gz
 RUN mkdir -p /usr/local/gcloud
