--- a/backend/src/apiserver/config/config.json
+++ b/backend/src/apiserver/config/config.json
@@ -11,6 +11,10 @@
     "BucketName": "mlpipeline",
     "PipelinePath": "pipelines"
   },
+  "ArchiveConfig": {
+    "LogFileName": "main.log",
+    "LogPathPrefix": "/artifacts"
+  },
   "InitConnectionTimeout": "6m",
   "DefaultPipelineRunnerServiceAccount": "pipeline-runner",
   "CacheEnabled": "true"
