--- a/manifests/gcp_marketplace/test/snapshot-base.yaml
+++ b/manifests/gcp_marketplace/test/snapshot-base.yaml
@@ -1,4 +1,34 @@
 ---
+# Source: kubeflow-pipelines/templates/config-snapshot.yaml
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: ml-pipeline-install-config-snapshot
+  labels:
+    app.kubernetes.io/name: 'my-release'
+  annotations:
+    pipelines.kubeflow.org/comment: |-
+      This is a snapshot of install parameters. There's no effect modifying this.
+data:
+  appName: 'my-release'
+  namespace: 'kubeflow'
+  managedStorageEnabled: 'false'
+  #
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: ml-pipeline-install-secret-snapshot
+  labels:
+    app.kubernetes.io/name: 'my-release'
+  annotations:
+    pipelines.kubeflow.org/comment: |-
+      This is a snapshot of install secrets. There's no effect modifying this.
+type: Opaque
+data:
+  # 
+
+---
 # Source: kubeflow-pipelines/templates/cache.yaml
 apiVersion: v1
 kind: ServiceAccount
@@ -188,12 +218,10 @@ metadata:
   labels:
     component: cache-server
 data:
-  
-  mysql_database: '{{ .Release.Name | replace "-" "_" | replace "." "_" }}_cachedb'
-  
+  mysql_database: 'my_release_cachedb'
   mysql_driver: "mysql"
   mysql_host: "mysql"
-  mysql_port: "3306" 
+  mysql_port: "3306"
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -272,7 +300,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: cache-server
-  labels: 
+  labels:
     app: cache-server
     app.kubernetes.io/name: my-release
 spec:
@@ -1504,9 +1532,7 @@ metadata:
   labels:
     component: metadata-server
 data:
-  
-  MYSQL_DATABASE: '{{ .Release.Name | replace "-" "_" | replace "." "_" }}_metadata'
-  
+  MYSQL_DATABASE: 'my_release_metadata'
   MYSQL_HOST: "mysql"
   MYSQL_PORT: "3306"
 ---
