--- a/manifests/gcp_marketplace/test/snapshot-managed-storage-with-db-prefix.yaml
+++ b/manifests/gcp_marketplace/test/snapshot-managed-storage-with-db-prefix.yaml
@@ -1,4 +1,41 @@
 ---
+# Source: kubeflow-pipelines/templates/config-snapshot.yaml
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: ml-pipeline-install-config-snapshot
+  labels:
+    app.kubernetes.io/name: 'my-release'
+  annotations:
+    pipelines.kubeflow.org/comment: |-
+      This is a snapshot of install parameters. There's no effect modifying this.
+data:
+  appName: 'my-release'
+  namespace: 'kubeflow'
+  managedStorageEnabled: 'true'
+  #
+  managedStorageCloudSqlInstanceConnectionName: 'myproject:us-central1:myinstance'
+  managedStorageGcsBucketName: 'mybucket'
+  managedStorageDatabasePrefix: 'my_kfp'
+  managedstorageDbUserName: 'root'
+  #
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: ml-pipeline-install-secret-snapshot
+  labels:
+    app.kubernetes.io/name: 'my-release'
+  annotations:
+    pipelines.kubeflow.org/comment: |-
+      This is a snapshot of install secrets. There's no effect modifying this.
+type: Opaque
+data:
+  # 
+  managedStorageDbPassword: 'MTIzNA=='
+  # 
+
+---
 # Source: kubeflow-pipelines/templates/cache.yaml
 apiVersion: v1
 kind: ServiceAccount
@@ -188,12 +225,10 @@ metadata:
   labels:
     component: cache-server
 data:
-  
   mysql_database: 'my_kfp_cachedb'
-  
   mysql_driver: "mysql"
   mysql_host: "mysql"
-  mysql_port: "3306" 
+  mysql_port: "3306"
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -278,7 +313,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: cache-server
-  labels: 
+  labels:
     app: cache-server
     app.kubernetes.io/name: my-release
 spec:
@@ -1330,9 +1365,7 @@ spec:
             - name: OBJECTSTORECONFIG_BUCKETNAME
               value: "mybucket"
             - name: DBCONFIG_DBNAME
-              
               value: 'my_kfp_pipeline'
-              
             - name: DBCONFIG_USER
               valueFrom:
                 secretKeyRef:
@@ -1527,9 +1560,7 @@ metadata:
   labels:
     component: metadata-server
 data:
-  
   MYSQL_DATABASE: 'my_kfp_metadata'
-  
   MYSQL_HOST: "mysql"
   MYSQL_PORT: "3306"
 ---
