added config default

--- a/backend/src/apiserver/config/config.json
+++ b/backend/src/apiserver/config/config.json
@@ -13,5 +13,6 @@
   },
   "InitConnectionTimeout": "6m",
   "DefaultPipelineRunnerServiceAccount": "pipeline-runner",
-  "CacheEnabled": "true"
+  "CacheEnabled": "true",
+  "UpdatePipelineVersionByDefault": "true"
 }
