moved config  value

--- a/backend/src/apiserver/config/config.json
+++ b/backend/src/apiserver/config/config.json
@@ -13,6 +13,5 @@
   },
   "InitConnectionTimeout": "6m",
   "DefaultPipelineRunnerServiceAccount": "pipeline-runner",
-  "CacheEnabled": "true",
-  "UpdatePipelineVersionByDefault": "true"
+  "CacheEnabled": "true"
 }
