chore(release): bumped version to 1.0.3

--- a/manifests/gcp_marketplace/chart/kubeflow-pipelines/templates/application.yaml
+++ b/manifests/gcp_marketplace/chart/kubeflow-pipelines/templates/application.yaml
@@ -13,7 +13,7 @@ metadata:
 spec:
   descriptor:
     type: Kubeflow Pipelines
-    version: 1.0.3-rc.1
+    version: 1.0.3
     description: |-
       Reusable end-to-end ML workflow
     maintainers:
