updated after feedback

--- a/manifests/kustomize/base/params.env
+++ b/manifests/kustomize/base/params.env
@@ -16,6 +16,5 @@ containerRuntimeExecutor=docker
 
 ## autoUpdatePipelineDefaultVersion: States if the pipeline version
 ## should be updated by defult for a versioned pipeline or not when a new
-## version is  uploaded. This sets the deployment wide definition,
-## however the upload request can overwrite the default value.
+## version is uploaded. This sets the deployment wide definition.
 autoUpdatePipelineDefaultVersion=true
