--- a/components/aws/sagemaker/model/component.yaml
+++ b/components/aws/sagemaker/model/component.yaml
@@ -34,10 +34,10 @@ inputs:
   description: Isolates the training container.
   default: "True"
 outputs:
-- {name: model_name, description: The model name SageMaker created.}
+- {name: model_name, description: The name of the model created by SageMaker.}
 implementation:
   container:
-    image: amazon/aws-sagemaker-kfp-components:0.8.0
+    image: amazon/aws-sagemaker-kfp-components:0.9.0
     command: [python3]
     args:
     - model/src/sagemaker_model_component.py
