--- a/components/aws/sagemaker/process/component.yaml
+++ b/components/aws/sagemaker/process/component.yaml
@@ -57,7 +57,7 @@ outputs:
 - {name: output_artifacts, description: A dictionary containing the output S3 artifacts.}
 implementation:
   container:
-    image: amazon/aws-sagemaker-kfp-components:0.9.0
+    image: redbackthomson/aws-kubeflow-sagemaker:latest
     command: [python3]
     args:
     - process/src/sagemaker_process_component.py
