Update fix unit test requirements

--- a/components/aws/sagemaker/tests/unit_tests/Dockerfile
+++ b/components/aws/sagemaker/tests/unit_tests/Dockerfile
@@ -10,6 +10,9 @@ RUN yum update -y \
 COPY ./components/aws/sagemaker/requirements.txt .
 RUN pip3 install -r requirements.txt
 
+COPY ./components/aws/sagemaker/dev_requirements.txt .
+RUN pip3 install -r dev_requirements.txt
+
 COPY . /app/
 
 WORKDIR /app/components/aws/sagemaker/tests/unit_tests/
