--- a/test/sample-test/Dockerfile
+++ b/test/sample-test/Dockerfile
@@ -4,8 +4,8 @@ FROM google/cloud-sdk:279.0.0
 
 RUN apt-get update -y
 # WORKAROUND: gcc-8-base was added because of https://github.com/kubeflow/pipelines/issues/4653
-RUN apt-get install --no-install-recommends -y -q gcc-8-base libssl-dev libffi-dev wget ssh
-RUN apt-get install --no-install-recommends -y -q default-jre default-jdk python3-setuptools python3.8-dev gcc libpython3.8-dev zlib1g-dev
+RUN apt-get install --no-install-recommends -y -q gcc-8-base libssl-dev libffi-dev wget ssh default-jre default-jdk \
+                         python3-setuptools python3.7-dev gcc libpython3.7-dev zlib1g-dev
 
 RUN wget https://bootstrap.pypa.io/get-pip.py && python3 get-pip.py
 
