--- a/components/aws/sagemaker/deploy/component.yaml
+++ b/components/aws/sagemaker/deploy/component.yaml
@@ -64,7 +64,7 @@ outputs:
 - {name: endpoint_name, description: The created endpoint name.}
 implementation:
   container:
-    image: redbackthomson/aws-kubeflow-sagemaker:latest
+    image: amazon/aws-sagemaker-kfp-components:1.0.0
     command: [python3]
     args:
     - deploy/src/sagemaker_deploy_component.py
