--- a/manifests/kustomize/base/argo/workflow-controller-deployment.yaml
+++ b/manifests/kustomize/base/argo/workflow-controller-deployment.yaml
@@ -27,7 +27,7 @@ spec:
         - --configmap
         - workflow-controller-configmap
         - --executor-image
-        - gcr.io/ml-pipeline/argoexec:v2.7.5-license-compliance
+        - docker.io/argoproj/argoexec:v2.11.6
         command:
         - workflow-controller
         env:
@@ -36,7 +36,7 @@ spec:
             fieldRef:
               apiVersion: v1
               fieldPath: metadata.namespace
-        image: gcr.io/ml-pipeline/workflow-controller:v2.7.5-license-compliance
+        image: docker.io/argoproj/workflow-controller:v2.11.6
         imagePullPolicy: IfNotPresent
         name: workflow-controller
         resources: {}
