updated tests and how parameter are set

--- a/manifests/kustomize/base/params.env
+++ b/manifests/kustomize/base/params.env
@@ -18,3 +18,9 @@ containerRuntimeExecutor=docker
 ## should be updated by defult for a versioned pipeline or not when a new
 ## version is uploaded. This sets the deployment wide definition.
 autoUpdatePipelineDefaultVersion=true
+
+
+## cronScheduleTimezone: States the timezone which should be used for
+## the cron scheduler. If not is specified the local timezone of the 
+## cluster will be used. 
+cronScheduleTimezone=""
