--- a/manifests/kustomize/base/params.env
+++ b/manifests/kustomize/base/params.env
@@ -23,4 +23,4 @@ autoUpdatePipelineDefaultVersion=true
 ## cronScheduleTimezone: States the timezone which should be used for
 ## the cron scheduler. If not is specified the local timezone of the 
 ## cluster will be used. 
-cronScheduleTimezone=""
+## cronScheduleTimezone=""
