[Backend] Implement helpers to initialize a SubjectAccessReview client
In preparation of SubjectAccessReview, we implement some helpers to
create a new Kubernetes Authorization clientset and return the
SubjectAccessReview client.
We also define some fake clients to be used by future tests.

--- a/backend/src/apiserver/client/BUILD.bazel
+++ b/backend/src/apiserver/client/BUILD.bazel
@@ -13,6 +13,8 @@ go_library(
         "pod_fake.go",
         "scheduled_workflow_fake.go",
         "sql.go",
+        "subject_access_review.go",
+        "subject_access_review_fake.go",
         "swf.go",
         "swf_fake.go",
         "workflow_fake.go",
