--- a/backend/src/apiserver/client/BUILD.bazel
+++ b/backend/src/apiserver/client/BUILD.bazel
@@ -33,6 +33,7 @@ go_library(
         "@com_github_minio_minio_go//:go_default_library",
         "@com_github_minio_minio_go//pkg/credentials:go_default_library",
         "@com_github_pkg_errors//:go_default_library",
+        "@io_k8s_api//authorization/v1:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_api//policy/v1beta1:go_default_library",
         "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
@@ -48,13 +49,8 @@ go_library(
 
 go_test(
     name = "go_default_test",
-    srcs = [
-        "sql_test.go",
-    ],
+    srcs = ["sql_test.go"],
     data = glob(["test/**/*"]),  # keep
     embed = [":go_default_library"],
-    deps = [
-        "@com_github_go_sql_driver_mysql//:go_default_library",
-        "@com_github_stretchr_testify//assert:go_default_library",
-    ],
+    deps = ["@com_github_go_sql_driver_mysql//:go_default_library"],
 )
