added timezone examples

--- a/manifests/kustomize/base/params.env
+++ b/manifests/kustomize/base/params.env
@@ -21,6 +21,7 @@ autoUpdatePipelineDefaultVersion=true
 
 
 ## cronScheduleTimezone: States the timezone which should be used for
-## the cron scheduler. If not is specified the local timezone of the 
-## cluster will be used. 
+## the cron scheduler. If not specified the local timezone of the 
+## cluster will be used. Valida values are UTC, Local or values according to 
+## the IANA Time Zone database, such as "America/New_York" and "Asia/Shanghai".
 cronScheduleTimezone=''
