edit component yaml to search for command in src

--- a/components/azure/azureml/aml-deploy-model/component.yaml
+++ b/components/azure/azureml/aml-deploy-model/component.yaml
@@ -17,7 +17,7 @@ implementation:
   container:
     image: ''
     command: [
-      "sh", "/scripts/deploy.sh",
+      "sh", "/src/deploy.sh",
       '-n', {inputValue: deployment_name},
       '-m', {inputValue: model_name},
       '-i', {inputValue: inference_config},
