--- a/components/azure/azureml/aml-deploy-model/DockerFile
+++ b/components/azure/azureml/aml-deploy-model/DockerFile
@@ -1,5 +1,6 @@
 FROM mcr.microsoft.com/azure-cli
 RUN pip install --upgrade pip &&\
-    az extension add -n azure-cli-ml
+    az extension add -n azure-cli-ml &&\
+    apk add --update jq
 COPY src/ /src/
 CMD bash
