--- a/test/sample-test/Dockerfile
+++ b/test/sample-test/Dockerfile
@@ -11,6 +11,10 @@ RUN wget https://bootstrap.pypa.io/get-pip.py && python3 get-pip.py
 COPY ./test/sample-test/requirements.txt /python/src/github.com/kubeflow/pipelines/test/sample-test/requirements.txt
 RUN pip3 install -r /python/src/github.com/kubeflow/pipelines/test/sample-test/requirements.txt
 
+# Install KFP server API from commit.
+COPY ./backend/api/python_http_client/kfp_server_api /python_http_client/kfp_server_api
+RUN pip3 install /python_http_client/kfp_server_api
+
 # Install python client, including DSL compiler.
 COPY ./sdk/python /sdk/python
 RUN cd /sdk/python && python3 setup.py install
