Remove cluster-scoped cache-deployer role & bindings under single-user mode
- Move namespace resource to base
- Remove cache-deployer cluster role under single-user mode

Signed-off-by: Jiaxin Shan <seedjeffwan@gmail.com>

--- a/manifests/kustomize/base/cache-deployer/kustomization.yaml
+++ b/manifests/kustomize/base/cache-deployer/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
 - cache-deployer-role.yaml
 - cache-deployer-rolebinding.yaml
 - cache-deployer-deployment.yaml
+- cache-deployer-sa.yaml
 images:
 - name: gcr.io/ml-pipeline/cache-deployer
   newTag: 1.1.0-alpha.1
