Update kustomize manifests for be kustomize v3 compatible

--- a/manifests/kustomize/env/aws/kustomization.yaml
+++ b/manifests/kustomize/env/aws/kustomization.yaml
@@ -1,26 +1,29 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: kubeflow
-bases:
+resources:
 - ../../env/platform-agnostic
 configMapGenerator:
 - name: pipeline-install-config
-  env: params.env
+  envs:
+  - params.env
   behavior: merge
 - name: workflow-controller-configmap
   behavior: replace
-  files:
+  envs:
   - config
 - name: ml-pipeline-ui-configmap
   behavior: replace
-  files:
+  envs:
   - viewer-pod-template.json
 secretGenerator:
 - name: mysql-secret
-  env: secret.env
+  envs:
+  - secret.env
   behavior: merge
 - name: mlpipeline-minio-artifact
-  env: minio-artifact-secret-patch.env
+  envs:
+  - minio-artifact-secret-patch.env
   behavior: merge
 generatorOptions:
   disableNameSuffixHash: true
