--- a/manifests/kustomize/base/kustomization.yaml
+++ b/manifests/kustomize/base/kustomization.yaml
@@ -1,22 +1,23 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: kubeflow
-bases:
+resources:
 - application
 - argo
 - pipeline
 - metadata
 - cache
 - cache-deployer
-resources:
 - pipeline-application.yaml
 # Used by Kustomize
 configMapGenerator:
 - name: pipeline-install-config
-  env: params.env
+  envs:
+  - params.env
 secretGenerator:
 - name: mysql-secret
-  env: params-db-secret.env
+  envs:
+  - params-db-secret.env
 vars:
 - name: kfp-namespace
   objref:
