--- a/manifests/kustomize/env/azure/kustomization.yaml
+++ b/manifests/kustomize/env/azure/kustomization.yaml
@@ -2,18 +2,20 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: kubeflow
 
-bases:
+resources:
 - ../../base
 - minio-azure-gateway
 
 configMapGenerator:
 - name: pipeline-install-config
-  env: params.env
+  envs:
+  - params.env
   behavior: merge
 
 secretGenerator:
 - name: mysql-secret
-  env: mysql-secret.env
+  envs:
+  - mysql-secret.env
   behavior: merge
 
 # Identifier for application manager to apply ownerReference.
