--- a/manifests/kustomize/env/azure/minio-azure-gateway/kustomization.yaml
+++ b/manifests/kustomize/env/azure/minio-azure-gateway/kustomization.yaml
@@ -7,7 +7,8 @@ resources:
 
 secretGenerator:
 - name: mlpipeline-minio-artifact
-  env: minio-artifact-secret.env
+  envs:
+  - minio-artifact-secret.env
 generatorOptions:
   # mlpipeline-minio-artifact needs to be referred by exact name
   disableNameSuffixHash: true
