--- a/manifests/kustomize/sample/kustomization.yaml
+++ b/manifests/kustomize/sample/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-bases:
+resources:
   # Or github.com/kubeflow/pipelines/manifests/kustomize/env/gcp?ref=1.0.0
   - ../env/gcp
   # Kubeflow Pipelines servers are capable of collecting Prometheus metrics.
@@ -20,12 +20,14 @@ commonLabels:
 # Used by Kustomize
 configMapGenerator:
   - name: pipeline-install-config
-    env: params.env
+    envs:
+      - params.env
     behavior: merge
 
 secretGenerator:
   - name: mysql-secret
-    env: params-db-secret.env
+    envs:
+      - params-db-secret.env
     behavior: merge
 
 # !!! If you want to customize the namespace,
