Adds RoboMaker and SageMaker RLEstimator components

--- a/components/aws/sagemaker/tests/unit_tests/Dockerfile
+++ b/components/aws/sagemaker/tests/unit_tests/Dockerfile
@@ -13,8 +13,6 @@ RUN pip3 install -r requirements.txt
 COPY ./components/aws/sagemaker/dev_requirements.txt .
 RUN pip3 install -r dev_requirements.txt
 
-COPY . /app/
+ENTRYPOINT [ "bash" ]
 
-WORKDIR /app/components/aws/sagemaker/tests/unit_tests/
-
-ENTRYPOINT [ "bash", "./run_automated_test.sh" ]
+CMD [ "" ]
