--- a/components/kubeflow/katib-launcher/component.yaml
+++ b/components/kubeflow/katib-launcher/component.yaml
@@ -3,7 +3,7 @@ description: Katib Experiment launcher
 inputs:
 - {name: Experiment Name,            type: String,       default: '',        description: 'Experiment name'}
 - {name: Experiment Namespace,       type: String,       default: anonymous, description: 'Experiment namespace'}
-- {name: Experiment Spec,            type: Base64Pickle, default: '',        description: 'Experiment specification to convert in base64 pickle format'}
+- {name: Experiment Spec,            type: JsonObject,   default: '{}',      description: 'Experiment specification in dict format'}
 - {name: Experiment Timeout Minutes, type: Integer,      default: 1440,      description: 'Time in minutes to wait for the Experiment to complete'}
 - {name: Delete Finished Experiment, type: Bool,         default: 'True',    description: 'Whether to delete the Experiment after it is finished'}
 outputs:
