--- a/manifests/kustomize/base/params.env
+++ b/manifests/kustomize/base/params.env
@@ -22,6 +22,6 @@ autoUpdatePipelineDefaultVersion=true
 
 ## cronScheduleTimezone: States the timezone which should be used for
 ## the cron scheduler. If not specified the local timezone of the 
-## cluster will be used. Valida values are UTC, Local or values according to 
+## cluster will be used. Valid values are UTC, Local or values according to 
 ## the IANA Time Zone database, such as "America/New_York" and "Asia/Shanghai".
 cronScheduleTimezone=''
