set env variable to empty

--- a/manifests/kustomize/base/params.env
+++ b/manifests/kustomize/base/params.env
@@ -24,4 +24,4 @@ autoUpdatePipelineDefaultVersion=true
 ## the cron scheduler. If not specified the local timezone of the 
 ## cluster will be used. Valid values are UTC, Local or values according to 
 ## the IANA Time Zone database, such as "America/New_York" and "Asia/Shanghai".
-cronScheduleTimezone=''
+cronScheduleTimezone=
