--- a/components/aws/sagemaker/tests/integration_tests/resources/config/rlestimator-training/config.yaml
+++ b/components/aws/sagemaker/tests/integration_tests/resources/config/rlestimator-training/config.yaml
@@ -4,14 +4,14 @@ Timeout: 900
 ExpectedTrainingImage: 462105765813.dkr.ecr.((REGION)).amazonaws.com/sagemaker-rl-ray-container:ray-0.8.5-tf-cpu-py36
 Arguments:
   region: ((REGION))
-  role: ((ASSUME_ROLE_ARN))
+  role: ((SAGEMAKER_ROLE_ARN))
   entry_point: "train_news_vendor.py"
   metric_definitions: "[]"
   hyperparameters: "{}"
   source_dir: s3://((DATA_BUCKET))/rlestimator/sourcedir.tar.gz
   max_run: 300
-  job_name: rlestimator-pipeline-int-test
-  model_artifact_path: s3://((DATA_BUCKET))/
+  job_name: rlestimator-test
+  model_artifact_path: s3://((DATA_BUCKET))/rlestimator/output/
   instance_count: 1
   instance_type: ml.c5.2xlarge
   framework: tensorflow
