--- a/components/aws/sagemaker/tests/integration_tests/resources/config/robomaker-create-simulation-app/config.yaml
+++ b/components/aws/sagemaker/tests/integration_tests/resources/config/robomaker-create-simulation-app/config.yaml
@@ -6,11 +6,11 @@ Arguments:
   app_name: robomaker-create-simulation-app-test
   sources:
     - s3Bucket: ((DATA_BUCKET))
-      s3Key: "robomaker/simulation_ws.tar.gz"
+      s3Key: "robomaker/simulation_ws.tar"
       architecture: "X86_64"
   simulation_software_name: "Gazebo"
-  simulation_software_version: "7"
+  simulation_software_version: "9"
   robot_software_name: "ROS"
-  robot_software_version: "Kinetic"
+  robot_software_version: "Melodic"
   rendering_engine_name: "OGRE"
   rendering_engine_version: "1.x"
