--- a/components/aws/sagemaker/tests/integration_tests/resources/config/robomaker-simulation-job/config.yaml
+++ b/components/aws/sagemaker/tests/integration_tests/resources/config/robomaker-simulation-job/config.yaml
@@ -12,11 +12,7 @@ Arguments:
     packageName: "hello_world_simulation"
     launchFile: "empty_world.launch"
     environmentVariables:
-      MODEL_S3_BUCKET: ((DATA_BUCKET))
-      MODEL_S3_PREFIX: "prefix-path"
-      ROS_AWS_REGION: ((REGION))
-      MARKOV_PRESET_FILE: "object_tracker.py"
-      NUMBER_OF_ROLLOUT_WORKERS: "1"
+      TURTLEBOT3_MODEL: "waffle_pi"
   robot_app_arn:
   robot_app_launch_config:
     packageName: "hello_world_robot"
