--- a/components/aws/sagemaker/simulation_job/component.yaml
+++ b/components/aws/sagemaker/simulation_job/component.yaml
@@ -53,7 +53,7 @@ outputs:
 - {name: job_id, description: The simulation job id.}
 implementation:
   container:
-    image: maniosullivan/aws-sagemaker-kfp-components:1.1.0
+    image: redbackthomson/aws-kubeflow-sagemaker:latest
     command: [python3]
     args:
     - simulation_job/src/robomaker_simulation_job_component.py
