--- a/components/aws/sagemaker/hyperparameter_tuning/component.yaml
+++ b/components/aws/sagemaker/hyperparameter_tuning/component.yaml
@@ -98,7 +98,7 @@ outputs:
     the training algorithm.}
 implementation:
   container:
-    image: redbackthomson/aws-kubeflow-sagemaker:latest
+    image: amazon/aws-sagemaker-kfp-components:1.1.0
     command: [python3]
     args:
     - hyperparameter_tuning/src/sagemaker_tuning_component.py
