--- a/test/kfp-functional-test/requirements.txt
+++ b/test/kfp-functional-test/requirements.txt
@@ -23,7 +23,6 @@ googleapis-common-protos==1.52.0  # via google-api-core
 idna==2.10                # via requests
 importlib-metadata==2.1.1  # via jsonschema
 jsonschema==3.2.0         # via kfp
-junit-xml==1.9            # via -r -
 kfp-pipeline-spec==0.1.3.1  # via kfp
 kfp-server-api==1.1.2rc1  # via kfp
 kfp==1.1.2                # via -r -
@@ -41,7 +40,7 @@ requests-oauthlib==1.3.0  # via kubernetes
 requests-toolbelt==0.9.1  # via kfp
 requests==2.25.0          # via google-api-core, google-cloud-storage, kubernetes, requests-oauthlib, requests-toolbelt
 rsa==4.6                  # via google-auth
-six==1.15.0               # via google-api-core, google-auth, google-cloud-core, google-resumable-media, jsonschema, junit-xml, kfp-server-api, kubernetes, protobuf, python-dateutil, websocket-client
+six==1.15.0               # via google-api-core, google-auth, google-cloud-core, google-resumable-media, jsonschema, kfp-server-api, kubernetes, protobuf, python-dateutil, websocket-client
 strip-hints==0.1.9        # via kfp
 tabulate==0.8.7           # via kfp
 urllib3==1.26.2           # via kfp-server-api, kubernetes, requests
