Adds ROBOMAKER_EXECUTION_ROLE_ARN to build vars

--- a/components/aws/sagemaker/tests/integration_tests/Dockerfile
+++ b/components/aws/sagemaker/tests/integration_tests/Dockerfile
@@ -34,6 +34,7 @@ ENV PATH "/opt/conda/envs/kfp_test_env/bin":$PATH
 # Environment variables to be used by tests
 ENV REGION="us-west-2"
 ENV SAGEMAKER_EXECUTION_ROLE_ARN="arn:aws:iam::1234567890:role/sagemaker-role"
+ENV ROBOMAKER_EXECUTION_ROLE_ARN="arn:aws:iam::1234567890:role/robomaker-role"
 ENV S3_DATA_BUCKET="kfp-test-data"
 ENV MINIO_LOCAL_PORT=9000
 ENV KFP_NAMESPACE="kubeflow"
